--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Template Engine</title>
 </head>
 <body>
     <header></header>
-    <footer></footer>
-    <script src="Javascript/main.js"></script>
+    <section id="template"></section>
+    <script src="Javascript/main.js" defer></script>
+    <footer>&copy; Tout droit réservé à son auteur</footer>
 </body>
 </html>
